force-app/main/default/objects/Data_table_Tree_Grid_Configuration__mdt/Data_table_Tree_Grid_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>This metadata holds configuration to setup Lightning Datatable/Lightning Treegrid</description>
    <label>Data table/Tree Grid Configuration</label>
    <pluralLabel>Data table/Tree Grid Configurations</pluralLabel>
</CustomObject>