force-app/main/default/objects/Data_table_Tree_Grid_Configuration__mdt/fields/Column_structure__c.field-meta.xml
<CustomField>
    <fullName>Column_structure__c</fullName>
    <description>JSON structured data having column details</description>
    <inlineHelpText>JSON structured data having column details</inlineHelpText>
    <label>Column structure</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>