force-app/main/default/objects/Data_table_Tree_Grid_Configuration__mdt/fields/Default_sort_by_field__c.field-meta.xml
<CustomField>
    <fullName>Default_sort_by_field__c</fullName>
    <description>This will be the default sorted column. Holds field api name of default sorted column</description>
    <inlineHelpText>This will be the default sorted column. Holds field api name of default sorted column</inlineHelpText>
    <label>Default sort by field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>