force-app/main/default/objects/Data_table_Tree_Grid_Configuration__mdt/fields/Default_sort_direction__c.field-meta.xml
<CustomField>
    <fullName>Default_sort_direction__c</fullName>
    <description>This will be the default sorted direction i.e., Ascending or Descending</description>
    <inlineHelpText>This will be the default sorted direction i.e., Ascending or Descending</inlineHelpText>
    <label>Default sort direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asc</fullName>
                <default>true</default>
                <label>Asc</label>
            </value>
            <value>
                <fullName>Desc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>