force-app/main/default/objects/Data_table_Tree_Grid_Configuration__mdt/fields/Fields_to_query__c.field-meta.xml
<CustomField>
    <fullName>Fields_to_query__c</fullName>
    <defaultValue>&apos;Id&apos; + &apos;,&apos; + &apos;RecordType.Name&apos;</defaultValue>
    <description>Holds all field api names separated by comma that are included in columns</description>
    <inlineHelpText>Holds all field api names separated by comma that are included in columns</inlineHelpText>
    <label>Fields to query</label>
    <type>TextArea</type>
</CustomField>