force-app/main/default/objects/Data_table_Tree_Grid_Configuration__mdt/fields/Header_icon_name__c.field-meta.xml
<CustomField>
    <fullName>Header_icon_name__c</fullName>
    <description>Holds icon name available from Lightning Design System. Click this click to choose best suited one: https://www.lightningdesignsystem.com/icons/</description>
    <inlineHelpText>Holds icon name available from Lightning Design System. Click this click to choose best suited one: https://www.lightningdesignsystem.com/icons/</inlineHelpText>
    <label>Header icon name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>