force-app/main/default/objects/Data_table_Tree_Grid_Configuration__mdt/fields/Object_api_name__c.field-meta.xml
<CustomField>
    <fullName>Object_api_name__c</fullName>
    <description>Holds the Object api name to pull the records to show in Hierarchy</description>
    <label>Object api name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>