force-app/main/default/objects/Data_table_Tree_Grid_Configuration__mdt/fields/Parent_field_api_name__c.field-meta.xml
<CustomField>
    <fullName>Parent_field_api_name__c</fullName>
    <description>Holds parent field api name to link parent and child records from the particular object</description>
    <inlineHelpText>Holds parent field api name to link parent and child records from the particular object</inlineHelpText>
    <label>Parent field api name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>