force-app/main/default/objects/Data_table_Tree_Grid_Configuration__mdt/fields/Record_structure__c.field-meta.xml
<CustomField>
    <fullName>Record_structure__c</fullName>
    <description>Write the content of the function.
parentThis - &apos;this&apos; object of Parent.
fetchedRecord - Record to map.</description>
    <inlineHelpText>Write the content of the function.
parentThis - &apos;this&apos; object of Parent.
fetchedRecord - Record to map.</inlineHelpText>
    <label>Record structure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>