force-app/main/default/objects/Data_table_Tree_Grid_Configuration__mdt/fields/Root_field_api_name__c.field-meta.xml
<CustomField>
    <fullName>Root_field_api_name__c</fullName>
    <description>Holds root field api name to link root and top most record with the current record to form the hierarchy.</description>
    <inlineHelpText>Holds root field api name to link root and top most record with the current record to form the hierarchy.</inlineHelpText>
    <label>Root field api name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>